# Ninety-Nine-Haskell-Problems

./: LICENSE  README.md  makefile  ninety-nine.cabal
src/: Problems.hs
src/Problems/: P01.hs  P02.hs  P03.hs  P04.hs  P05.hs  P06.hs  P07.hs  P08.hs  P09.hs  P10.hs
test/: Spec.hs
